# MeetingPerception

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/audio-capture/: Cargo.toml  README.md
crates/audio-capture/src/: lib.rs  native.rs  platform.rs  types.rs  windows_loopback.rs
services/ai-service/: README.md  package.json  pyproject.toml
services/ai-service/app/: main.py
services/ai-service/app/api/: http.py  websocket.py
services/ai-service/app/asr/: base.py  funasr_provider.py  mock_provider.py
services/ai-service/app/audio/: frame.py
services/ai-service/app/context/: manager.py
services/ai-service/app/core/: config.py
services/ai-service/app/diarization/: audio_utils.py  base.py  funasr_provider.py  mock_provider.py  pyannote_provider.py  router.py
services/ai-service/app/events/: detector.py  suggestion_engine.py
services/ai-service/app/llm/: anthropic.py  base.py  json_utils.py  mock_provider.py  openai_compatible.py  router.py
services/ai-service/app/prompts/: event_detector.md  meeting_summary.md  suggestion_generator.md
services/ai-service/app/schemas/: meeting.py  settings.py  websocket.py
services/ai-service/app/storage/: database.py  exporter.py  repositories.py
services/ai-service/app/transcript/: processor.py  segmenter.py
services/ai-service/meeting_copilot_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai-service/tests/: test_health.py
(+51 files in other folders)
