[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"
description = "Audio capture abstractions for Meeting Copilot Local"

[dependencies]
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com",
  "Win32_System_Threading",
] }
