[project]
name = "meeting-copilot-ai-service"
version = "0.1.0"
description = "Local AI service for Meeting Copilot."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"
