[package]
name = "meeting-copilot-desktop"
version = "0.1.0"
description = "Tauri shell for Meeting Copilot Local"
authors = ["Meeting Copilot"]
edition = "2021"

[lib]
name = "meeting_copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
audio-capture = { path = "../../../crates/audio-capture" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
